<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Road geotagger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_make_photo">MakePhotoActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="instructions">Keywords accepted :</string>
    <string name="stop">1) \'stop\' to tag stop signs</string>
    <string name="traffic">2) \'traffic\' to tag high traffic</string>
    <string name="accident">3) \'accident\' to tag an accident</string>
    <string name="signal">4) \'signal\' to tag traffic signals</string>
    <string name="stop_service">Stop listening</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="speak">Geo tag locations by voice</string>
    <string name="viewonmap">View tagged locations on map</string>
    <string name="title_activity_map">MapActivity</string>

    <string-array name="layers_array">
        <item>@string/filter_all</item>
        <item>@string/filter_stop</item>
        <item>@string/filter_traffic</item>
        <item>@string/filter_traffic_signals</item>
        <item>@string/filter_accident</item>
    </string-array>

    <string name="filter_all">Show all</string>
    <string name="filter_stop">Stop signs</string>
    <string name="filter_traffic">High traffic</string>
    <string name="filter_traffic_signals">traffic signals</string>
    <string name="filter_accident">Accidents</string>
    <string name="menu_view">View</string>
    <string name="menu_delete">Delete</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>

</resources>