<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="220dip"
        android:layout_height="220dip"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/view_profile" />

    <TextView
        android:id="@+id/textSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/imageButton1"
        android:text="@string/speak"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="220dip"
        android:layout_height="220dip"
        android:layout_below="@+id/textSpeak"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/mic" />

    <TextView
        android:id="@+id/textViewOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:text="@string/viewonmap"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>